--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "release": "DISABLE_CZ=true standard-version --no-verify -t server@v"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^17.0.21",
     "commitizen": "^4.2.4",
     "concurrently": "^7.0.0",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "apollo-server": "^3.6.3",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "isomorphic-fetch": "^3.0.0"
